--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,7 @@
     height: max-content;
     font-family: "Montserrat", sans-serif;
     width: 100%;
-    background-color: white;
+    background-    color: black;
     padding: 1rem 0;
     position: sticky;
     z-index: 99;
