--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap');
-
+body {
+  font-family: 'Quicksand', sans-serif;
+  /* Font-family yang baru */
+  margin: 0;
+  padding: 0;
+  background: #333;
+  text-transform: uppercase;
+  font-size: 11px;
+  background: #0f0c29; 
+  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
+  background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
+  background: linear-gradient(
+    to right,
+    #24243e,
+    #302b63,
+    #0f0c29
+  ); 
+}
             .formBox {
                 padding: 15px;
                 text-align: center;
@@ -7,10 +23,9 @@
                 min-width: 50vw;
                 display: flex;
                 flex-direction: column;
-                background: #f8f8f885;
                 border-radius: 30px;
                 backdrop-filter: blur(10px);
-
+                color: white;
             }
 
             h2 {
@@ -23,82 +38,201 @@
             }
 
             #header {
-                height: max-content;
-                font-family: "Montserrat", sans-serif;
-                width: 100%;
-                background-color: white;
-                padding: 1rem 0;
-                position: sticky;
-                z-index: 99;
-                top: 0;
-                left: 0;
-                box-shadow: 0 6px 31px -2px rgba(0, 0, 0, 0.1);
+              height: max-content;
+              font-family: "Montserrat", sans-serif;
+              width: 100%;
+              background-color: white;
+              padding: 1rem 0;
+              position: sticky;
+              z-index: 99;
+              top: 0;
+              left: 0;
+              box-shadow: 0 6px 31px -2px rgba(0, 0, 0, 0.1);
+            }
+            @media (max-width: 800px) {
+              #header {
+                text-align: center;
+                height: auto;
               }
-              @media (max-width: 800px) {
-                #header {
-                  text-align: center;
-                  height: auto;
-                }
-              }
+            }
+            .header-content-div {
+              max-width: 95rem;
+              width: auto;
+              margin: 0 auto;
+            }
+            @media (max-width: 991px) {
               .header-content-div {
-                max-width: 95rem;
-                width: auto;
-                margin: 0 auto;
+                max-width: 75rem;
               }
-              @media (max-width: 991px) {
-                .header-content-div {
-                  max-width: 75rem;
-                }
-              }
+            }
+            #header-img {
+              height: 5rem;
+              width: auto;
+            }
+            @media (max-width: 800px) {
               #header-img {
-                height: 5rem;
-                width: auto;
+                height: 4rem;
               }
-              @media (max-width: 800px) {
-                #header-img {
-                  height: 4rem;
-                }
-              }
+            }
+            nav {
+              position: relative;
+              top: 0.8rem;
+              float: right;
+              font-size: 1.6rem;
+              font-weight: 500;
+              padding: 1.5rem 0;
+            }
+            @media (max-width: 800px) {
               nav {
-                position: relative;
-                top: 0.8rem;
-                float: right;
-                font-size: 1.6rem;
-                font-weight: 500;
-                padding: 1.5rem 0;
+                position: static;
+                float: none;
+                font-size: 1.4rem;
+                padding: 0.5rem 1rem;
               }
-              @media (max-width: 800px) {
-                nav {
-                  position: static;
-                  float: none;
-                  font-size: 1.4rem;
-                  padding: 0.5rem 1rem;
-                }
-              }
+            }
+            .nav-link {
+              text-decoration: none;
+              color: #333;
+              margin: 0 0.5rem;
+              padding: 0 0.6rem;
+              transition: border-bottom 0.2s;
+            }
+            @media (max-width: 475px) {
               .nav-link {
-                text-decoration: none;
-                color: #333;
-                margin: 0 0.5rem;
-                padding: 0 0.6rem;
-                transition: border-bottom 0.2s;
+                margin: 0 0.2rem;
+                padding: 0 0.2rem;
+                font-size: 1.2rem;
               }
-              @media (max-width: 475px) {
-                .nav-link {
-                  margin: 0 0.2rem;
-                  padding: 0 0.2rem;
-                  font-size: 1.2rem;
-                }
+            }
+            .nav-link:hover {
+              color: #e23d3d;
+              border-bottom: 2px solid #e23d3d;
+            }
+            .nav-link:active {
+              color: #f84848;
+            }
+          
+            .flexible {
+              display: flex;
+              flex-flow: row wrap;
+              justify-content: center;
+              align-content: center;
+              text-align: center;
+              color: black;
+            }
+            .home-sec {
+              font-family: "Montserrat", sans-serif;
+              background-color: #ffffff;
+              text-align: start;
+              min-height: 60rem;
+              height: auto;
+              margin: 0 auto 10rem auto;
+              color: black;
+            
+              max-width: 95rem;
+              color: #333;
+            }
+            @media (max-width: 800px) {
+              .home-sec {
+                flex-flow: column wrap;
+                max-width: 100%;
               }
-              .nav-link:hover {
-                color: #e23d3d;
-                border-bottom: 2px solid #e23d3d;
+            }
+            .eye-grabber {
+              padding: 0 0rem;
+              color: black;
+              background-color: white;
+            }
+            @media (max-width: 800px) {
+              .eye-grabber {
+                max-width: max-content;
+                padding-bottom: 8rem;
+                background-color: black;
               }
-              .nav-link:active {
-                color: #f84848;
+            }
+            .eye-grabber h1 {
+              font-size: 5rem;
+              line-height: 1.5;
+              font-weight: 600;
+              color: black;
+            }
+            .eye-grabber h2 {
+              font-size: 2.3rem;
+              font-weight: 500;
+              color: black;
+            }
+            .eye-grabber-img {
+              flex: 1;
+              margin-left: 19rem;
+            }
+            
+            @media (max-width: 800px) {
+              .eye-grabber-img {
+                width: 100%;
+                margin-left: 0;
               }
-
-              #active {
-                color: orangered;
-                font-size: 22px;
-                font-weight: bold;
+            }
+          
+            .section-heading {
+              font-size: 2.5rem;
+              font-family: "Montserrat", sans-serif;
+              font-weight: 500;
+              line-height: 1.2;
+              margin: 0;
+              padding: 10rem 0 5rem 0;
+              text-align: center;
+            }
+          
+            #varieties {
+              background-color: black;
+            }
+            .tile {
+              background-color: #fafafa;
+              height: 25rem;
+              width: 25rem;
+              box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+              border-radius: 2rem;
+              transition: all 0.2s;
+              padding: 1rem;
+              margin: 1rem;
+            }
+            @media (max-width: 680px) {
+              .tile {
+                width: auto;
+                max-width: 100%;
+                min-width: 20rem;
+                margin: 1.5rem auto;
+                height: 5px;
               }
+            }
+            .tile img {
+              width: 100%;
+              max-width: 29rem;
+              border-radius: 0.5rem;
+            }
+            .tile h4 {
+              font-size: 2rem;
+              font-weight: 600;
+              padding: 1rem 0;
+              color: #e23d3d;
+              margin: 0;
+            }
+            .tile p {
+              font-size: 1.6rem;
+              padding: 0;
+              margin: 0;
+            }
+          
+            .tile ul {
+              font-size: 1.6rem;
+            }
+            .tile:hover {
+              transform: scale(1.05);
+              box-shadow: 0 20px 40px rgba(0, 0, 0, 0.19), 0 16px 16px rgba(0, 0, 0, 0.23);
+            }
+          
+            #active {
+              color: orangered;
+              font-size: 22px;
+              font-weight: bold;
+            }
