--- a/css/profile.css
+++ b/css/profile.css
@@ -30,7 +30,7 @@
                 height: max-content;
                 font-family: "Montserrat", sans-serif;
                 width: 100%;
-                background-color: white;
+                background-color: black;
                 padding: 1rem 0;
                 position: sticky;
                 z-index: 99;
@@ -288,7 +288,7 @@ body {
 }
 .prgm-skill {
   flex: 1;
-  background-color: white;
+  background-color: black;
   border-radius: 20px;
   margin: 15px;
   padding: 15px;
@@ -296,14 +296,14 @@ body {
 .container-skill {
   width: 100%;
   border-radius: 10px;
-  background-color: white;
+  background-color: black;
 }
 .skills {
   text-align: right;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   padding: 5px;
-  color: white;
+      color: black;
   font-weight: bold;
 }
 
