--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,17 @@
   font-family: "Open Sans", sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   scroll-behavior: smooth;
 }
 body {
-  margin: 1000;
-  padding: 1000;
+  font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+  font-size: 11px;
+  background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* Combined linear gradient background */
 }
+
 #header {
   height: max-content;
   font-family: "Montserrat", sans-serif;
@@ -113,7 +117,7 @@ nav {
   flex: 1;
   padding: 0 2rem;
   margin-right: 2rem;
-  color: white;
+      color: white;
 }
 @media (max-width: 800px) {
   .eye-grabber {
@@ -150,7 +154,7 @@ nav {
   margin: 0;
   padding: 5rem 0 5rem 0;
   text-align: center;
-  color: white;
+      color: black;
 }
 .sec-content-div {
   font-size: 2rem;
@@ -160,7 +164,7 @@ nav {
   justify-content: space-around;
   max-width: 95rem;
   margin: 0 auto;
-  color: white;
+      color: black;
 }
 
 .sec-content-div {
@@ -171,7 +175,7 @@ nav {
   justify-content: space-around;
   max-width: 95rem;
   margin: 0 auto;
-  color: white;
+      color: white;
 }
 .sec-padding {
   padding: 8rem 0 10rem 0;
@@ -226,7 +230,7 @@ nav {
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.19), 0 16px 16px rgba(0, 0, 0, 0.23);
 }
 #class {
-  background-color: white;
+  background-color: black;
 }
 .bars {
   height: max-content;
