--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,25 @@
+.body {
+  font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  padding: 0;
+  background: #333;
+  font-size: 11px;
+  background: #0f0c29; 
+  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
+  background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
+  background: linear-gradient(
+    to right,
+    #24243e,
+    #302b63,
+    #0f0c29
+  ); 
+}
+
 #header {
     height: max-content;
     font-family: "Montserrat", sans-serif;
     width: 100%;
-    background-    color: black;
+    background-color: white;
     padding: 1rem 0;
     position: sticky;
     z-index: 99;
@@ -120,7 +137,7 @@
   .eye-grabber h2 {
     font-size: 2.3rem;
     font-weight: 500;
-    color: black;
+    color: white;
   }
   .eye-grabber-img {
     flex: 1;
@@ -132,17 +149,6 @@
   }
   .eye-grabber-img img {
     max-width: 100%;
-  }
-
-  #video-background {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1000;
   }
 
   #active {
